--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -1,17 +1,13 @@
 atom-workspace,
 atom-text-editor {
   font-family: "Fira Code";
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 1.8;
+  font-weight: 500;
+  line-height: 1.75;
 }
 atom-panel, .settings-view, .tab-bar {
   font-family: "Roboto";
-  font-size: 0.9em;
 }
-atom-text-editor::shadow{
-  .entity.other.attribute-name, .comment {
-    font-family: "Operator Mono Book";
-    font-style: italic;
-  }
+atom-text-editor.editor .syntax--entity.syntax--other.syntax--attribute-name, atom-text-editor.editor .syntax--comment {
+  font-family: "Operator Mono";
+  font-style: italic;
 }
